# Qwen-LatentCoT

./: README.md  pyproject.toml
configs/inference/: base.yaml
configs/training/: stage1_1.yaml  stage1_2.yaml  stage1_3.yaml
docs/: Qwen_LatentCoT.md
examples/: sample_train.jsonl
qwen_latent_cot/: __init__.py  cli.py  constants.py  prompts.py
qwen_latent_cot/data/: __init__.py  collators.py  dataset.py  preprocess.py
qwen_latent_cot/inference/: __init__.py  pipeline.py
qwen_latent_cot/models/: __init__.py  latent_student.py  loaders.py  qwen_image_backend.py  reflector.py  special_tokens.py
qwen_latent_cot/training/: __init__.py  precompute.py  runner.py  trainers.py
qwen_latent_cot/utils/: __init__.py  images.py  io.py  logging.py  losses.py  masks.py  seeding.py  text_ops.py
scripts/: infer_two_turn.sh  precompute_teacher_latents.sh  precompute_teacher_reps.sh  train_stage1_1.sh  train_stage1_2.sh  train_stage1_3.sh
tests/: test_infer_pipeline.py  test_text_ops.py
